# harness-bench-fast

./: .gitignore  AGENTS.md  LEGACY_RESULTS.md  LICENSE  README.md  ai_assistant_full_gigachat35_ift_full.json  ai_assistant_full_gigachat35_ift_smoke.json  analyze_toolaudit.py  claude_code_opus48_full.json  claude_code_opus48_smoke.json  claude_code_opus48_task215_retry.json  codex_gpt55_skills.json  codex_gpt55_skills_rerun.json  flat_harness_gigachat35_ift_full.json  free_code_gpt2giga_lightning_full.json  free_code_gpt2giga_lightning_smoke.json  gigachat35_432b_ift_profile_full351.json  gigachat35_432b_ift_profile_full351_rerun_20260714.json  gigachat35_432b_ift_profile_skills_adversarial.json  gigachat35_432b_ift_profile_smoke_20260714.json  gigachat_3_5_430b_profile_ift_full.json  gigachat_3_5_430b_profile_ift_full_20260630.json  gigachat_3_5_430b_profile_ift_rerun.json  gigachat_3_5_430b_profile_ift_run2.json  gigachat_3_5_430b_profile_ift_run3.json  gigachat_3_5_430b_profile_ift_run4.json  gigachat_3_5_430b_profile_ift_run5.json  gigachat_3_5_430b_profile_ift_smoke.json  gigachat_3_5_430b_profile_ift_smoke_new.json  gigachat_3_5_430b_profile_ift_toolaudit_failuremodes.json  gigachat_3_5_430b_profile_ift_toolaudit_findings.json  gigachat_3_5_430b_profile_ift_toolaudit_full.json  gigachat_3_5_430b_profile_ift_toolaudit_smoke_findings.json  gigachat_3_5_430b_profile_ift_toolaudit_smoke_full.json  gigachat_3_5_430b_pure_ift_full.json  gigachat_3_5_430b_pure_ift_rerun_run1.json  gigachat_3_5_430b_pure_ift_rerun_run2.json  gigachat_3_5_430b_pure_ift_rerun_run3.json  gigachat_3_5_430b_pure_ift_rerun_run4.json  gigachat_3_5_430b_pure_ift_rerun_run5.json  (+30 more)
docs/: index.html  styles.css
harness_bench/: __init__.py  __main__.py  core.py  harbor_export.py  metrics.py  runner.py  runner_cli.py  runner_openrouter.py  runner_pure.py  tasks.py  tasks_adversarial.py  tasks_agentic.py  tasks_diagnostic.py  tasks_extra.py  tasks_extreme.py  tasks_hard.py  tasks_memory.py  tasks_more.py  tasks_skills.py  tasks_tbench_lite.py  tasks_vcs.py  verifiers.py  versioning.py
runs/: claude_code_haiku_full351.json  claude_code_haiku_full371.json  claude_code_sonnet_full351.json  deepseek_v32_openrouter_full351.json  deepseek_v4flash_openrouter_full351.json  deepseek_v4pro_openrouter_full351.json  giga35_profile_full371.json  giga35_pure_full371.json  gigachat2max_ift_profile_full351.json  gigachat35_432b_ift_pure_full351.json  gigachat3lightning_ift_profile_full351.json  gigachat3pro_ift_profile_full351.json  gigachat3ultra_ift_profile_full351.json  glm51_openrouter_full351.json  glm52_openrouter_full351.json  gpt41_openrouter_full351.json  gptoss120b_openrouter_full351.json  kimi_cli_k3_openrouter_failretry.json  kimi_cli_k3_openrouter_full.json  kimi_cli_k3_openrouter_smoke.json  kimi_k3_deepagents_pure_full.json  kimi_k3_deepagents_pure_smoke.json  kimi_k3_deepagents_pure_transient_retry.json  opencode_gpt2giga_gigachat35_full351.json  qwen35flash_openrouter_full351.json  qwen36flash_openrouter_full351.json  yandex_gpt51pro_openrouter_full351.json  yandex_gpt5lite_openrouter_full351.json  (+1 more)
scripts/: hermes-gigachat  (+8 more)
(+643 files in other folders)
